# aubo_ros_driver

./: README.md
aubo_base/: CMakeLists.txt  package.xml
aubo_base/include/aubo_base/: aubo_hardware.h
aubo_base/launch/: base.launch
aubo_base/src/: aubo_base.cpp  aubo_hardware.cpp
aubo_control/: CMakeLists.txt  package.xml
aubo_control/config/: aubo_i5_control.yaml  aubo_i7_control.yaml
aubo_control/launch/: aubo_control.launch
aubo_description/: CMakeLists.txt  package.xml
aubo_description/launch/: view_model.launch  view_robot.launch
aubo_description/rviz/: view_robot.rviz
aubo_moveit_config/aubo_i5_moveit_config/: .setup_assistant  package.xml
aubo_moveit_config/aubo_i5_moveit_config/config/: aubo_i5.srdf  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
aubo_moveit_config/aubo_i5_moveit_config/launch/: aubo_i5_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  excute.launch  move_group.launch  moveit.rviz  planning_context.launch
aubo_msgs/: CMakeLists.txt  package.xml
aubo_msgs/srv/: UpdateToolParam.srv
