<?xml version="1.0"?>
<package format="2">
  <name>aubo_control</name>
  <version>0.0.0</version>
  <description>The aubo_control package</description>

  <author email="lei.yan@iquotient-robot.com">QuartzYan</author>
  <maintainer email="lei.yan@iquotient-robot.com">QuartzYan</maintainer>

  <!-- LICENSE -->
  <license>MIT</license>

  <!-- DEPEND -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
